# python-waldur-client

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml  setup.py
src/: waldur_client.py
tests/: test_waldur_client.py
waldur_client/: __init__.py
